Tue Mar  1 02:16:15 CET 2005 (tk)
---------------------------------
  * clamscan: respect --exclude/include when entering directories (requested
	      by Dean Plant <dean.plant*roke.co.uk>)

Tue Mar  1 01:51:53 CET 2005 (tk)
---------------------------------
  * clamscan: add "Engine version" to summary (requested by Robert
	      Allerstorfer <roal*anet.at>)

Tue Mar  1 01:13:20 CET 2005 (tk)
---------------------------------
  * libclamav: use new MD5 implementation (thanks to Solar Designer
	       <solar*openwall.com>)

Sun Feb 27 02:26:42 CET 2005 (tk)
---------------------------------
  * libclamav: improve metadata scanner
  * sigtool: add support for .zmd files

Thu Feb 24 18:37:45 CET 2005 (tk)
---------------------------------
  * libclamav/scanners.c: fix NULL pointer dereference in metadata scanner
			  (thanks to Nigel)	

Wed Feb 23 09:42:52 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Remove the pid file on exit
			Warn if sendmail can't be started when sending
				interception messages

Sun Feb 20 05:08:54 CET 2005 (tk)
---------------------------------
  * libclamav: add support for detection based on analysis of archive metadata
	       (currently only zip is supported)
  * libclamav/clamav.h, libclamav/matcher.c: handle cli_zip_node list
  * libclamav/readdb.c: load *.zmd (zip metadata signatures)
  * libclamav/str.c: new function cli_hex2num()

Fri Feb 18 21:29:16 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c: Handle broken RFC2231 messages reported by Maxim
				Dounin <mdounin at rambler-co.ru>

Fri Feb 18 18:04:30 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Save separate bounces in separate files

Thu Feb 17 19:28:46 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Prescan some bounces before saving for full scanning

Thu Feb 17 16:13:29 CET 2005 (tk)
---------------------------------