@@ -218,10 +218,14 @@ void help(void)
     mprintf("    --move=DIRECTORY                     Move infected files into DIRECTORY\n");
 #ifdef HAVE_REGEX_H
     mprintf("    --exclude=REGEX                      Don't scan file names matching REGEX\n");
+    mprintf("    --exclude-dir=REGEX                  Don't scan directories matching REGEX\n");
     mprintf("    --include=REGEX                      Only scan file names matching REGEX\n");
+    mprintf("    --include-dir=REGEX                  Only scan directories matching REGEX\n");
 #else
     mprintf("    --exclude=PATT                       Don't scan file names containing PATT\n");
+    mprintf("    --exclude-dir=PATT                   Don't scan directories containing PATT\n");
     mprintf("    --include=PATT                       Only scan file names containing PATT\n");
+    mprintf("    --include-dir=PATT                   Only scan directories containing PATT\n");
 #endif
 
     mprintf("\n");
