@@ -83,7 +83,9 @@ int main(int argc, char **argv)
 	    {"move", 1, 0, 0},
 	    {"remove", 0, 0, 0},
 	    {"exclude", 1, 0, 0},
+	    {"exclude-dir", 1, 0, 0},
 	    {"include", 1, 0, 0},
+	    {"include-dir", 1, 0, 0},
 	    {"max-files", 1, 0, 0},
 	    {"max-space", 1, 0, 0},
             {"max-ratio", 1, 0, 0},
