@@ -1,5 +1,5 @@
 .\" Manual page created by Tomasz Kojm, 14/15 IV 2002
-.TH "clamscan" "1" "January 26, 2005" "Tomasz Kojm" "Clam AntiVirus"
+.TH "clamscan" "1" "March 1, 2005" "Tomasz Kojm" "Clam AntiVirus"
 .SH "NAME"
 .LP 
 clamscan \- scan files and directories against viruses
@@ -52,11 +52,11 @@ Sound bell on virus detection.
 \fB\-\-no\-summary\fR
 Do not display summary at the end of scanning.
 .TP 
-\fB\-\-exclude=PATT\fR
-Don't scan file names containing PATT. It may be used multiple times.
+\fB\-\-exclude=PATT, \-\-exclude\-dir=PATT\fR
+Don't scan file/directory names containing PATT. It may be used multiple times.
 .TP 
-\fB\-\-include=PATT\fR
-Only scan file names containing PATT. It may be used multiple times.
+\fB\-\-include=PATT, \-\-include\-dir=PATT\fR
+Only scan file/directory names containing PATT. It may be used multiple times.
 .TP 
 \fB\-i, \-\-infected\fR
 Only print infected files.
